Modify secure restful service guide

--- a/guide/secure_restful_service/ballerina.conf
+++ b/guide/secure_restful_service/ballerina.conf
@@ -2,8 +2,8 @@
 
 ["b7a.users.counter"]
 password="password"
-scopes="add"
+scopes="add_order"
 
 ["b7a.users.admin"]
 password="password"
-scopes="add,update,cancel"
+scopes="add_order,update_order,cancel_order"
